--- a/docs/blog/_config.yml
+++ b/docs/blog/_config.yml
@@ -22,8 +22,8 @@ title: Welcome to IT Axel Pages-Play
 email: alex@itaxel.be
 description: >- # this means to ignore newlines until "baseurl:"
   This is my little playground.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/blog" # the subpath of your site, e.g. /blog
+url: "https://itaxel.github.io/pages-play" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:
 github_username: itaxel
 
