--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -23,7 +23,7 @@ email: alex@itaxel.be
 description: >- # this means to ignore newlines until "baseurl:"
   This is my little playground.
 baseurl: "/blog" # the subpath of your site, e.g. /blog
-url: "https://itaxel.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://itaxel.github.io/pages-play" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:
 github_username: itaxel
 
